--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 # database init, supports mysql too
-database=hsqldb
+# database init, supports mysql too
+database=mysql
+MYSQL_SERVER=localhost
+spring.datasource.url=jdbc:mysql://${MYSQL_SERVER}/petclinic
+spring.datasource.username=root
+spring.datasource.password=petclinic
+ # Uncomment this the first time the app runs
+#spring.datasource.initialize=true
+
 spring.datasource.schema=classpath*:db/${database}/schema.sql
 spring.datasource.data=classpath*:db/${database}/data.sql
 
@@ -24,4 +32,4 @@ logging.level.org.springframework=INFO
 
 # Active Spring profiles
 spring.profiles.active=production
-server.port=80
+server.port=8080
