--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,6 @@
 # database init, supports mysql too
 # database init, supports mysql too
-database=mysql
-MYSQL_SERVER=localhost
-spring.datasource.url=jdbc:mysql://${MYSQL_SERVER}/petclinic
-spring.datasource.username=root
-spring.datasource.password=petclinic
- # Uncomment this the first time the app runs
-#spring.datasource.initialize=true
-
+database=hsqldb
 spring.datasource.schema=classpath*:db/${database}/schema.sql
 spring.datasource.data=classpath*:db/${database}/data.sql
 
