--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,10 @@
         <artifactId>cobertura-maven-plugin</artifactId>
         <version>${cobertura.version}</version>
         <configuration>
+          <formats>
+            <format>html</format>
+            <format>xml</format>
+          </formats>
           <check />
         </configuration>
         <executions>
