--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,33 @@
-mysql:
-  image: mysql
-  ports:
-    - "3306:3306"
-  environment:
-    - MYSQL_ROOT_PASSWORD=root
-    - MYSQL_DATABASE=test
-  volumes:
-    - "./conf.d:/etc/mysql/conf.d:ro"
+version: '3'
+
+services:
+  mysql:
+    image: docker.io/mysql:5.7.8
+    ports:
+      - "3306:3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=petclinic
+      - MYSQL_DATABASE=petclinic
+    volumes:
+      - "/Users/paulojr/projects/devops/curso-alura/mysql_data:/var/lib/mysql"
+    container_name: mysql
+    networks:
+      - petclinic
+
+  petclinic:
+    image: fabric8/java-alpine-openjdk8-jdk
+    ports:
+      - 8088:8088
+    environment:
+      - JAVA_APP_JAR=/app/spring-petclinic.jar
+      - spring.profiles.active=mysql
+      - MYSQL_SERVER=mysql
+    volumes:
+      - "./target:/app"
+    container_name: petclinic
+    networks:
+      - petclinic
+
+networks:
+  petclinic:
+    driver: bridge
